Support for executing commands in different envs and process files and scripts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
     "cSpell.words": [
-        "libyamlconf"
+        "libexec",
+        "FAKEROOT",
+        "resolv",
+        "mtab",
+        "sysfs",
+        "lowerdir",
+        "upperdir",
+        "arcname",
+        "metas"
     ],
     "editor.formatOnSave": true,
 	"[python]": {
